# French-Cleaner

./: README.fr.md  README.md
french_cleaner/: cleaner.py
french_cleaner/french_cleaner/: README.md  pyproject.toml
french_cleaner/french_cleaner/french_cleaner/: __init__.py  cleaner.py
french_cleaner/french_cleaner/french_cleaner/rules/: linebreaks.py  misc.py  quotes.py
french_cleaner/french_cleaner/tests/: test_cleaner.py  test_linebreaks.py  test_misc.py
french_cleaner/rules/: __init__.py  apostrophes.py  spaces.py
tests/: test_apostrophes.py  test_quotes.py  test_spaces.py
