[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "french-cleaner"
version = "0.1.0"
description = "Pipeline de nettoyage typographique de textes en français"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["nlp", "french", "text-cleaning", "typography", "regex"]

dependencies = []

[project.optional-dependencies]
recommended = [
    "ftfy>=6.0",       # correction du mojibake / encodage cassé
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ftfy>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["french_cleaner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["french_cleaner"]
omit = ["tests/*"]
